--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jerotrica/adopt-me#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.6",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
