--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "adopt-me",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
@@ -40,5 +39,6 @@
   },
   "browserslist": [
     "last 2 Chrome versions"
-  ]
+  ],
+  "description": ""
 }
