--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
   },
